--- a/css/admin.css
+++ b/css/admin.css
@@ -152,6 +152,12 @@
 	padding: 5px 15px;
 }
 
+#ds-plugin #php-info.button-primary {
+	display: block;
+	text-align: center;
+	margin: 0 auto;
+}
+
 #ds-plugin .center {
 	text-align: center;
 }
