--- a/css/admin.css
+++ b/css/admin.css
@@ -1,14 +1,45 @@
+/* not prefixed with #ds-plugin for reasons */
+.icon-action {
+	max-width: 16px;
+	max-height: 16px;
+	cursor: pointer;
+}
+
+.edit-comments-php .icon-action {
+	max-width: 12px;
+	max-height: 12px;
+	vertical-align: middle;
+}
+
+/* prefixed with #ds-plugin */
+body.dam-spam {
+	background: #111;
+}
+
+body.dam-spam .wrap > div.notice {
+	border-width: 0 0 0 4px;
+	background: #000;
+}
+
 #ds-plugin, #ds-plugin * {
 	box-sizing: border-box;
+	transition: all 0.5s ease;
+}
+
+#ds-plugin, #ds-plugin h2, #ds-plugin h3, #ds-plugin h4, #ds-plugin h5, #ds-plugin h6, #ds-plugin p {
+	color: #fff;
+}
+
+#ds-plugin h1, #ds-plugin a {
+	color: #c6ac40;
+}
+
+#ds-plugin hr {
+	border-color: #333;
 }
 
 #ds-plugin img {
 	margin-right: 5px;
-}
-
-.ds-action img {
-	width: 23px;
-	cursor: pointer;
 }
 
 #ds-plugin ul, #ds-plugin ol {
@@ -33,6 +64,18 @@
 #ds-plugin li {
 	line-height: 125%;
 	margin: 20px 0;
+}
+
+#ds-plugin input, #ds-plugin textarea, #ds-plugin select, #ds-plugin option {
+	color: #ccc;
+	border: 2px solid #333;
+	outline: 0;
+	margin-bottom: 5px;
+	background: #333;
+}
+
+#ds-plugin input:focus, #ds-plugin textarea:focus {
+	border: 2px solid #c6ac40;
 }
 
 #ds-plugin input[type="text"] {
@@ -63,13 +106,12 @@
 }
 
 #ds-plugin #ds-head {
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 	font-size: 30px;
 	font-weight: bold;
 }
 
 #ds-plugin .ds-subhead, #ds-plugin .ds-subhead2 {
-	color: #333;
+	color: #aaa;
 	font-size: 20px !important;
 	font-weight: 500;
 }
@@ -88,13 +130,14 @@
 }
 
 #ds-plugin div.mainsection {
-	font-weight: bold;
 	font-size: 18px;
+	font-weight: bold;
+	color: #eae4ca;
 	margin: 30px 0 15px;
 }
 
 #ds-plugin .ds-info-box {
-	background: white !important;
+	background: #222;
 	width: 100%;
 	padding: 0.1em 1.5em 1.5em;
 	margin: 20px 0;
@@ -109,10 +152,15 @@
 
 #ds-plugin .stat-box {
 	padding: 5px 10px;
-	background: #fff;
+	background: #222;
 	margin: 5px;
 	border-radius: 2;
 	float: left;
+}
+
+#ds-plugin .postbox {
+	border-color: #333;
+	background: #222;
 }
 
 #ds-plugin .postbox .inside {
@@ -121,11 +169,12 @@
 
 #ds-plugin #dstable {
 	width: 100%;
-	background-color: #eee;
+	background: #222;
 }
 
 #ds-plugin td {
 	padding: 10px;
+	background: #222;
 }
 
 #ds-plugin .filterhead {
@@ -135,13 +184,13 @@
 #ds-plugin th.ds-cleanup {
 	position: sticky;
 	top: 32px;
-	background: #675682;
+	background: #c6ac40;
 	text-transform: uppercase;
 	color: #fff;
 }
 
 #ds-plugin .ds-cleanup-tr:hover {
-	background: #F1F1F1 !important;
+	background: #222 !important;
 }
 
 #ds-plugin .phpinfodisplay table {
@@ -149,7 +198,16 @@
 }
 
 #ds-plugin .button-primary {
+	font-size: 14px;
+	color: #000;
+	font-weight: 500;
 	padding: 5px 15px;
+	border-color: #c6ac40;
+	background-color: #c6ac40;
+}
+
+#ds-plugin .button-primary:hover, #ds-plugin .button-primary:focus {
+	opacity:0.8;
 }
 
 #ds-plugin #php-info.button-primary {
@@ -162,26 +220,45 @@
 	text-align: center;
 }
 
+#ds-plugin .nav-tab-wrapper, #ds-plugin .wrap h2.nav-tab-wrapper, #ds-plugin h1.nav-tab-wrapper {
+	border-color: #000;
+}
+
+#ds-plugin .nav-tab {
+	color: #fff;
+	border-color: #000;
+	background: #000;
+}
+
+#ds-plugin .nav-tab-active {
+	background: #333;
+}
+
 /* checkbox toggle switch */
-#ds-plugin div.checkbox.switcher label, #ds-plugin div.radio.switcher label {
+#ds-plugin div.checkbox.switcher label,
+#ds-plugin div.radio.switcher label {
 	padding: 0;
 }
 
-#ds-plugin div.checkbox.switcher label *, #ds-plugin div.radio.switcher label * {
+#ds-plugin div.checkbox.switcher label *,
+#ds-plugin div.radio.switcher label * {
 	vertical-align: middle;
-	font-size: 12px;
 }
 
-#ds-plugin div.checkbox.switcher label input, #ds-plugin div.radio.switcher label input {
+#ds-plugin div.checkbox.switcher label input,
+#ds-plugin div.radio.switcher label input {
 	display: none;
 }
 
-#ds-plugin div.checkbox.switcher label input + span, div.radio.switcher label input + span {
+#ds-plugin div.checkbox.switcher label input + span,
+#ds-plugin div.radio.switcher label input + span {
 	position: relative;
 	display: inline-block;
-	margin-right: 10px;
-	width: 56px;
-	height: 28px;
+	font-size: 12px;
+	line-height: 12px;
+	margin-right: 4px;
+	width: 45px;
+	height: 22.5px;
 	background: #d9534f;
 	border: 1px solid #d43f3a;
 	border-radius: 50px;
@@ -189,16 +266,8 @@
 	cursor: pointer;
 }
 
-#ds-plugin div.checkbox.switcher label input:disabled + span {
-	color: gray !important;
-	background: gray !important;
-	border-color: gray !important;
-	opacity: 0.5 !important;
-	cursor: not-allowed !important;
-	pointer-events: none !important;
-}
-
-#ds-plugin div.checkbox.switcher label input + span small, #ds-plugin div.radio.switcher label input + span small {
+#ds-plugin div.checkbox.switcher label input + span small,
+#ds-plugin div.radio.switcher label input + span small {
 	position: absolute;
 	display: block;
 	width: 50%;
@@ -209,44 +278,43 @@
 	left: 0;
 }
 
-#ds-plugin div.checkbox.switcher label input + span small:before, #ds-plugin div.radio.switcher label input + span small:before {
-	content: 'Off';
-	position: absolute;
-	top: 4.5px;
-	left: 31px;
-	width: 26px;
-	height: 26px;
-	border-radius: 90px;
-	transition: 0.3s;
-	text-indent: 0;
-	color: #fff;
-}
-
-#ds-plugin div.checkbox.switcher label input:checked + span, #ds-plugin div.radio.switcher label input:checked + span {
+#ds-plugin div.checkbox.switcher label input:checked + span,
+#ds-plugin div.radio.switcher label input:checked + span {
 	background: #5cb85c;
 	border-color: #4cae4c;
 }
 
-#ds-plugin div.checkbox.switcher label input:checked + span small, #ds-plugin div.radio.switcher label input:checked + span small {
+#ds-plugin div.checkbox.switcher label input:checked + span small,
+#ds-plugin div.radio.switcher label input:checked + span small {
 	left: 50%;
 }
 
-#ds-plugin div.checkbox.switcher label input:checked + span small:before, #ds-plugin div.radio.switcher label input:checked + span small:before {
-	content: 'On';
+#ds-plugin div.checkbox.switcher label input + span small:before,
+#ds-plugin div.radio.switcher label input + span small:before {
+	content: 'Off';
 	position: absolute;
 	top: 4.5px;
-	left: -20px;
+	left: 24px;
 	width: 26px;
 	height: 26px;
 	border-radius: 90px;
 	transition: 0.3s;
-	text-indent: 0;
 	color: #fff;
 }
 
-#ds-plugin div.checkbox.switcher label input:checked + span small:after, #ds-plugin div.radio.switcher label input:checked + span small:after {
-	left: calc(100% - 2px);
-	transform: translateX(-100%);
+#ds-plugin div.checkbox.switcher label input:checked + span small:before,
+#ds-plugin div.radio.switcher label input:checked + span small:before {
+	content: 'On';
+	left: -17px;
+}
+
+#ds-plugin div.checkbox.switcher label input:disabled + span {
+	color: gray !important;
+	background: gray !important;
+	border-color: gray !important;
+	opacity: 0.5 !important;
+	cursor: not-allowed !important;
+	pointer-events: none !important;
 }
 
 #ds-plugin div.checkbox.switcher label:active:after {
@@ -260,40 +328,6 @@
 		top: 48px;
 	}
 
-}
-
-/* not prefixed with #ds-plugin for reasons */
-.icon-action {
-	max-width: 16px;
-	max-height: 16px;
-}
-
-.wrap > div.notice {
-	margin-bottom: 30px;
-}
-
-.ds-hide-links {
-	position: absolute;
-	right: 0;
-	margin: 5px 25px 0 0;
-}
-
-.ds-hide-links a {
-	font-size: 12px;
-	color: gray;
-	text-decoration: underline;
-	cursor: pointer;
-}
-
-.update-nag.notice.notice-warning.inline .ds-hide-notices {
-	margin-bottom: 10px;
-}
-
-.ds-disable-admin-emails-wraps {
-	margin-left: 20px;
-	border-bottom: 1px solid #ddd;
-	margin-bottom: 15px;
-	margin-top: 15px;
 }
 
 /* ds firewall */
